--- a/DameDoy/templates/html/materiales.html
+++ b/DameDoy/templates/html/materiales.html
@@ -115,14 +115,22 @@
                 </div>
                 <div class="precio-autor">
                     <span class="precio">$ {{ material.precio }}</span>
-                    <div class="acciones">
-                        <span class="autor">{{ material.autor.first_name|default:material.autor.username }}</span>
-                        {% if material.estado == 'publicado' and material.autor != user %}
-                        <button class="btn-agregar-carrito" data-material-id="{{ material.id }}" title="Agregar al carrito">
-                            <i class="fas fa-cart-plus"></i>
-                        </button>
+                <div class="acciones">
+                    <span class="autor">{{ material.autor.first_name|default:material.autor.username }}</span>
+                    
+                    {% if material.estado == 'publicado' and material.autor != user %}
+                        {% if user.is_authenticated %}
+                            <button class="btn-agregar-carrito" data-material-id="{{ material.id }}" title="Agregar al carrito">
+                                <i class="fas fa-cart-plus"></i>
+                            </button>
+                        {% else %}
+                            <a href="{% url 'login' %}" title="Inicia sesión para agregar al carrito">
+                                <i class="fas fa-cart-plus"></i>
+                            </a>
                         {% endif %}
-                    </div>
+                    {% endif %}
+                </div>
+
                 </div>
             </div>
         </article>
