--- a/DameDoy/templates/html/publicar_material.html
+++ b/DameDoy/templates/html/publicar_material.html
@@ -4,6 +4,7 @@
 {% block title %}Publicar Material{% endblock %}
 
 {% block styles %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="{% static 'css/publicar_material.css' %}">
 {% endblock %}
 
@@ -51,47 +52,41 @@
             </div>
 
             <div class="form-group">
+                <label for="universidad">Universidad <span class="required">*</span></label>
+                <select id="universidad" name="universidad" class="select2" required>
+                    <option value="">Seleccione una universidad</option>
+                    {% for univ in universidades %}
+                        <option value="{{ univ.id }}">{{ univ.siglas }} - {{ univ.nombre }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <div class="form-group">
                 <label for="facultad">Facultad <span class="required">*</span></label>
-                <input type="text" 
-                       id="facultad" 
-                       name="facultad" 
-                       class="form-control"
-                       required 
-                       maxlength="100"
-                       placeholder="Nombre de la facultad">
+                <select id="facultad" name="facultad" class="select2" required disabled>
+                    <option value="">Primero seleccione una universidad</option>
+                </select>
             </div>
 
             <div class="form-group">
                 <label for="carrera">Carrera <span class="required">*</span></label>
-                <input type="text" 
-                       id="carrera" 
-                       name="carrera" 
-                       class="form-control"
-                       required 
-                       maxlength="100"
-                       placeholder="Nombre de la carrera">
+                <select id="carrera" name="carrera" class="select2" required disabled>
+                    <option value="">Primero seleccione una facultad</option>
+                </select>
             </div>
 
             <div class="form-group">
                 <label for="materia">Materia <span class="required">*</span></label>
-                <input type="text" 
-                       id="materia" 
-                       name="materia" 
-                       class="form-control"
-                       required 
-                       maxlength="100"
-                       placeholder="Nombre de la materia">
+                <select id="materia" name="materia" class="select2" required disabled>
+                    <option value="">Primero seleccione una carrera</option>
+                </select>
             </div>
 
             <div class="form-group">
                 <label for="docente">Docente <span class="required">*</span></label>
-                <input type="text" 
-                       id="docente" 
-                       name="docente" 
-                       class="form-control"
-                       required 
-                       maxlength="100"
-                       placeholder="Nombre del docente">
+                <select id="docente" name="docente" class="select2" required disabled>
+                    <option value="">Primero seleccione una materia</option>
+                </select>
             </div>
 
             <div class="form-group full-width">
@@ -140,9 +135,10 @@
         </div>
     </form>
 </div>
-
-{% block scripts %}
-<script src="{% static 'js/publicar_material.js' %}"></script>
 {% endblock %}
 
+{% block scripts %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="{% static 'js/publicar_material.js' %}"></script>
 {% endblock %}
