--- a/DameDoy/static/css/styles.css
+++ b/DameDoy/static/css/styles.css
@@ -34,6 +34,7 @@ main {
     --texto-primario: #1e293b;
     --texto-secundario: #475569;
     --texto-claro: #94a3b8;
+    --texto-muy-oscuro: #0f172a;
     --texto-placeholder: #94a3b8;
 
     /* 💬 Mensajes / Alertas */
@@ -159,6 +160,7 @@ main {
     --texto-primario: #f1f5f9;
     --texto-secundario: #cbd5e1;
     --texto-claro: #64748b;
+    --texto-muy-oscuro: #94a3b8;
     --texto-placeholder: #475569;
 
     /* 💬 Mensajes / Alertas */
